# autopilot

./: Anchor.toml  README.md  package-lock.json  package.json
programs/autopilot/: Cargo.toml
programs/autopilot/src/: errors.rs  lib.rs
programs/autopilot/src/pool/: deposit_pool.rs  mod.rs  pool.rs  withdraw_pool.rs
programs/autopilot/src/protocols/: mod.rs  protocol.rs  utils_mints.rs  utils_spl.rs
programs/autopilot/src/protocols/solend/: delete_solend.rs  get_balance_solend.rs  init_solend.rs  kill_solend.rs  mod.rs  rebalance_solend.rs  utils.rs  withdraw_solend.rs
programs/autopilot/src/vault/: mod.rs
programs/autopilot/src/vault/instructions/: change_vault_info.rs  collect_fees.rs  init_vault.rs  mod.rs  set_distribution.rs
programs/autopilot/src/vault/state/: fees.rs  last_update.rs  mod.rs  vault_info.rs
tests/: 1-test_vault-local.ts  2-test_pool-local.ts  3-test_fees-local.ts  3-test_fees_solend-devnet.ts  4-test_solend-devnet.ts  4-test_withdraw_solend-devnet.ts
tests/general/: accounts.ts  utils.ts
tests/pool/: classes.ts  instructions.ts
tests/protocols/: protocol.ts
tests/protocols/solend/: classes.ts  instructions.ts
tests/vault/: classes.ts  instructions.ts
