[package]
name = "autopilot"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "autopilot"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.22.1", features = ["init-if-needed"] }
anchor-spl = "0.22.1"
solana-program = "1.8.14"
francium_src = { git = "ssh://git@github.com/Accrue-Finance/francium.git", version = "0.1.0", features = ["no-entrypoint"], package = "francium-lending-pool" }
solend_src = { git = "https://github.com/Accrue-Finance/solana-program-library", version = "0.1.0", features = ["no-entrypoint"], package = "spl-token-lending" }
uint = "=0.9.1"
rust_decimal = "1.21"
arrayref = "0.3.6"